feat: add /me endpoint
